--- a/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
@@ -16,23 +16,49 @@
         </div>
     </div>
     <section id="main" class="main">
+        <div class="block0">
+            <h2>почему стоит выбрать нас?</h2>
+            <div class="grid">
+                <div class="wrap-box">
+                    <div class="box">
+                        <img src="{{ asset('bundles/sitemain/frontend/images/icon1.png') }}" alt=""/>
+                        <div class="name">опыт 15 лет</div>
+                    </div>
+                </div><div class="wrap-box">
+                    <div class="box">
+                        <img src="{{ asset('bundles/sitemain/frontend/images/icon2.png') }}" alt=""/>
+                        <div class="name">клиенты - первые лица страны</div>
+                    </div>
+                </div><div class="wrap-box">
+                    <div class="box">
+                        <img src="{{ asset('bundles/sitemain/frontend/images/icon3.png') }}" alt=""/>
+                        <div class="name">гарантия на все виды работ</div>
+                    </div>
+                </div><div class="wrap-box">
+                    <div class="box">
+                        <img src="{{ asset('bundles/sitemain/frontend/images/icon4.png') }}" alt=""/>
+                        <div class="name">постэксплуатационное обслуживание</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="block1">
             <h2>Почему важно сделать правильный выбор?</h2>
             <div class="grid">
                 <div class="wrap-box">
                     <div class="box">
-                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
                         <div class="name">Безопасность</div>
+                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
                         <div class="name">Долговечность</div>
+                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
                         <div class="name">Экономия</div>
+                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
                     </div>
                 </div>
             </div>
