--- a/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
@@ -61,7 +61,17 @@
         {% endblock %}
     </header>
     <footer>
-        <img src="{{ asset('bundles/sitemain/frontend/images/footer.jpg') }}" alt=""/>
+        <div class="wrap-footer1">
+            <div class="footer1">
+                <div class="head">вы можете позвонить нам по телефону: +7 (495) 625-86-43</div>
+                <div class="buttons">
+                    <a href="#" class="btn">написать нам</a>
+                    <span>или</span>
+                    <a href="#" class="btn">заказать обратный звонок</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer2"></div>
     </footer>
     <!-- конец Шапка -->
 {% endblock %}
