--- a/src/Site/MainBundle/Resources/public/frontend/styles/main.css
+++ b/src/Site/MainBundle/Resources/public/frontend/styles/main.css
@@ -1,24 +1,25 @@
 @import "http://webfonts.ru/import/play.css";
-/* line 12, ../sass/main.sass */
+/* line 13, ../sass/main.sass */
 html, body {
   font-family: "Play";
   min-height: 100%;
 }
 
-/* line 16, ../sass/main.sass */
+/* line 17, ../sass/main.sass */
 body > div {
   display: none;
 }
 
-/* line 20, ../sass/main.sass */
+/* line 21, ../sass/main.sass */
 header .header-top {
   background: #f3f6f7;
 }
-/* line 22, ../sass/main.sass */
+/* line 23, ../sass/main.sass */
 header .wrap-head1 {
-  border-bottom: #cfe1eb solid 1px;
+  background: #e9ebec;
+  border-bottom: #dcdcdc solid 1px;
 }
-/* line 24, ../sass/main.sass */
+/* line 26, ../sass/main.sass */
 header .wrap-head1 .head1 {
   width: 100%;
   max-width: 865px;
@@ -26,7 +27,7 @@ header .wrap-head1 .head1 {
   line-height: 50px;
   margin: 0 auto;
 }
-/* line 30, ../sass/main.sass */
+/* line 32, ../sass/main.sass */
 header .wrap-head1 .head1 ul {
   height: 50px;
   padding: 0px;
@@ -34,21 +35,21 @@ header .wrap-head1 .head1 ul {
   text-transform: uppercase;
   text-align: justify;
 }
-/* line 36, ../sass/main.sass */
+/* line 38, ../sass/main.sass */
 header .wrap-head1 .head1 ul li {
   display: inline-block;
   color: #000;
   font-size: 14px;
 }
-/* line 40, ../sass/main.sass */
+/* line 42, ../sass/main.sass */
 header .wrap-head1 .head1 ul li span {
   color: #c28a1d;
 }
-/* line 42, ../sass/main.sass */
+/* line 44, ../sass/main.sass */
 header .wrap-head1 .head1 ul li.last {
   width: 100%;
 }
-/* line 44, ../sass/main.sass */
+/* line 46, ../sass/main.sass */
 header .head2 {
   width: 100%;
   height: 130px;
@@ -56,14 +57,14 @@ header .head2 {
   margin: 0 auto;
   padding: 0px 47px 0px 47px;
 }
-/* line 50, ../sass/main.sass */
+/* line 52, ../sass/main.sass */
 header .head2 .logo {
   display: table-cell;
   height: 130px;
   width: 180px;
   vertical-align: middle;
 }
-/* line 55, ../sass/main.sass */
+/* line 57, ../sass/main.sass */
 header .head2 .logo a {
   display: inline-block;
   height: 100px;
@@ -71,33 +72,33 @@ header .head2 .logo a {
   background: url("../images/logo.png") no-repeat;
   border: 0px;
 }
-/* line 61, ../sass/main.sass */
+/* line 63, ../sass/main.sass */
 header .head2 div.right {
   display: table-cell;
   vertical-align: middle;
   width: 100%;
-  padding-left: 45px;
+  padding-left: 29px;
 }
-/* line 66, ../sass/main.sass */
+/* line 68, ../sass/main.sass */
 header .head2 div.right div.top {
   width: 747px;
   text-align: justify;
-  padding-top: 19px;
+  padding-top: 22px;
 }
-/* line 70, ../sass/main.sass */
+/* line 72, ../sass/main.sass */
 header .head2 div.right div.top div {
   display: inline-block;
 }
-/* line 72, ../sass/main.sass */
+/* line 74, ../sass/main.sass */
 header .head2 div.right div.top div.last {
   width: 100%;
 }
-/* line 74, ../sass/main.sass */
+/* line 76, ../sass/main.sass */
 header .head2 div.right div.top .phone, header .head2 div.right div.top .email {
   color: #557183;
   font-size: 16px;
 }
-/* line 77, ../sass/main.sass */
+/* line 79, ../sass/main.sass */
 header .head2 div.right div.top button {
   display: inline-block;
   height: 30px;
@@ -118,78 +119,78 @@ header .head2 div.right div.top button {
   -webkit-border-radius: 15px;
   border-radius: 15px 15px 15px 15px;
 }
-/* line 87, ../sass/main.sass */
+/* line 89, ../sass/main.sass */
 header .head2 div.right div.bottom {
   padding-top: 3px;
 }
-/* line 90, ../sass/main.sass */
+/* line 92, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul {
   padding: 0;
   margin: 0;
   text-align: justify;
 }
-/* line 94, ../sass/main.sass */
+/* line 96, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul li {
   display: inline-block;
 }
-/* line 96, ../sass/main.sass */
+/* line 98, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul li.last {
   width: 100%;
 }
-/* line 98, ../sass/main.sass */
+/* line 100, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul li a {
   color: #000000;
   font-size: 18px;
   text-decoration: none;
   padding: 0px;
 }
-/* line 103, ../sass/main.sass */
+/* line 105, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul li a:hover, header .head2 div.right div.bottom .menu ul li a:focus, header .head2 div.right div.bottom .menu ul li a:active {
   color: #c1891c;
   background: none;
 }
-/* line 107, ../sass/main.sass */
+/* line 109, ../sass/main.sass */
 header .head2 div.right div.bottom .menu ul li.current a {
   color: #c1891c;
 }
-/* line 110, ../sass/main.sass */
-header .background-video {
-  height: 654px;
-}
 /* line 112, ../sass/main.sass */
-header .background-video .video {
-  height: 654px;
+header .background-video {
+  height: 572px;
 }
 /* line 114, ../sass/main.sass */
+header .background-video .video {
+  height: 572px;
+}
+/* line 116, ../sass/main.sass */
 header .background-video .grid {
   position: relative;
   width: 1070px;
-  margin: -654px auto 0px auto;
-  padding-top: 50px;
+  margin: -572px auto 0px auto;
+  padding-top: 28px;
 }
-/* line 119, ../sass/main.sass */
+/* line 121, ../sass/main.sass */
 header .background-video .grid .wrap-box {
   display: inline-block;
   width: 33.33%;
   vertical-align: top;
-  margin-bottom: 50px;
+  margin-bottom: 28px;
 }
-/* line 124, ../sass/main.sass */
+/* line 126, ../sass/main.sass */
 header .background-video .grid .wrap-box .box {
-  margin: 0px 7px;
+  margin: 0px 14px;
   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   overflow: hidden;
 }
-/* line 128, ../sass/main.sass */
+/* line 130, ../sass/main.sass */
 header .background-video .grid .wrap-box .box a {
   display: inline-block;
   width: 100%;
   text-decoration: none;
   color: #000000;
 }
-/* line 133, ../sass/main.sass */
+/* line 135, ../sass/main.sass */
 header .background-video .grid .wrap-box .box img {
   -webkit-transition: all 1.5s ease-in-out;
   -moz-transition: all 1.5s ease-in-out;
@@ -197,14 +198,14 @@ header .background-video .grid .wrap-box .box img {
   -ms-transition: all 1.5s ease-in-out;
   width: 100%;
 }
-/* line 139, ../sass/main.sass */
+/* line 141, ../sass/main.sass */
 header .background-video .grid .wrap-box .box img:hover {
   -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
   -o-transform: scale(1.2);
   transform: scale(1.2);
 }
-/* line 144, ../sass/main.sass */
+/* line 146, ../sass/main.sass */
 header .background-video .grid .wrap-box .box .name {
   position: relative;
   font-size: 14px;
@@ -214,13 +215,13 @@ header .background-video .grid .wrap-box .box .name {
   text-transform: uppercase;
   z-index: 1000;
 }
-/* line 152, ../sass/main.sass */
+/* line 154, ../sass/main.sass */
 header .container {
   width: 100%;
   padding: 0px;
   margin: 0px;
 }
-/* line 156, ../sass/main.sass */
+/* line 158, ../sass/main.sass */
 header .container .menu-left {
   width: 268px;
   position: fixed;
@@ -229,129 +230,185 @@ header .container .menu-left {
   -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
   -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.18);
-  margin: 40px auto 0 auto;
+  margin: 20px auto 0 auto;
   left: -886px;
   right: 0px;
 }
-/* line 165, ../sass/main.sass */
+/* line 167, ../sass/main.sass */
 header .container .menu-left ul {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-/* line 169, ../sass/main.sass */
+/* line 171, ../sass/main.sass */
 header .container .menu-left li {
   margin-bottom: 20px;
 }
-/* line 171, ../sass/main.sass */
+/* line 173, ../sass/main.sass */
 header .container .menu-left li a {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
 }
-/* line 178, ../sass/main.sass */
+/* line 177, ../sass/main.sass */
+header .container .menu-left li a:hover {
+  color: #c28a1d;
+}
+/* line 180, ../sass/main.sass */
+header .container .menu-left li.current > a {
+  color: #c28a1d;
+}
+/* line 185, ../sass/main.sass */
 header .container .menu-left > ul > li > ul {
   margin-top: 20px;
 }
-/* line 181, ../sass/main.sass */
+/* line 188, ../sass/main.sass */
 header .container .menu-left > ul > li > ul > li > a {
   color: #557183;
 }
-/* line 183, ../sass/main.sass */
+/* line 191, ../sass/main.sass */
+header .container .menu-left > ul.current > a {
+  color: #c28a1d;
+}
+/* line 194, ../sass/main.sass */
 header .content {
   width: 100%;
   padding: 0px;
   margin: 0px;
 }
-/* line 187, ../sass/main.sass */
+/* line 198, ../sass/main.sass */
 header .content .wrap_head {
   height: 120px;
   line-height: 120px;
 }
-/* line 190, ../sass/main.sass */
+/* line 201, ../sass/main.sass */
 header .content .wrap_head .head {
   max-width: 1070px;
-  color: #000;
+  color: #fff;
   font-size: 18px;
   text-transform: uppercase;
   margin: 0 auto;
   padding: 0px 47px 0px 272px;
 }
-/* line 197, ../sass/main.sass */
+/* line 208, ../sass/main.sass */
 header .content .wrap_text {
   background: #fff;
 }
-/* line 199, ../sass/main.sass */
+/* line 210, ../sass/main.sass */
 header .content .wrap_text .text {
   max-width: 1070px;
   margin: 0 auto;
   padding: 40px 47px 40px 272px;
 }
-/* line 205, ../sass/main.sass */
+/* line 216, ../sass/main.sass */
 header .content .breadcrumbs ul {
   padding: 0;
   margin: 0 0 20px 0;
   list-style: none;
 }
-/* line 209, ../sass/main.sass */
+/* line 220, ../sass/main.sass */
 header .content .breadcrumbs ul li {
   display: inline-block;
 }
-/* line 211, ../sass/main.sass */
+/* line 222, ../sass/main.sass */
 header .content .breadcrumbs ul li a {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
 }
-/* line 215, ../sass/main.sass */
+/* line 226, ../sass/main.sass */
 header .content .breadcrumbs ul li span {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
 }
-/* line 219, ../sass/main.sass */
+/* line 230, ../sass/main.sass */
 header .content .breadcrumbs ul li span.line {
   padding: 0px 5px;
 }
 
-/* line 224, ../sass/main.sass */
-section.main .block1 {
-  background: #e5e5e5;
+/* line 235, ../sass/main.sass */
+section .block0 {
+  background: #fff;
   text-align: center;
 }
-/* line 227, ../sass/main.sass */
-section.main .block1 h2 {
+/* line 238, ../sass/main.sass */
+section .block0 h2 {
   color: #000;
   font-size: 16px;
-  padding: 25px 0 35px 0;
+  padding: 28px 0 28px 0;
   margin: 0;
   text-transform: uppercase;
 }
-/* line 233, ../sass/main.sass */
-section.main .block1 .grid {
+/* line 244, ../sass/main.sass */
+section .block0 .grid {
+  position: relative;
+  width: 1150px;
+  margin: 0px auto 0px auto;
+}
+/* line 248, ../sass/main.sass */
+section .block0 .grid .wrap-box {
+  display: inline-block;
+  width: 25%;
+  vertical-align: top;
+  margin-bottom: 28px;
+}
+/* line 253, ../sass/main.sass */
+section .block0 .grid .wrap-box .box {
+  background: #fff;
+  margin: 0px 62px;
+  overflow: hidden;
+}
+/* line 257, ../sass/main.sass */
+section .block0 .grid .wrap-box .box img {
+  width: 100%;
+}
+/* line 259, ../sass/main.sass */
+section .block0 .grid .wrap-box .box .name {
+  color: #000;
+  font-size: 16px;
+  padding: 28px 0 28px 0;
+  margin: 0;
+  text-transform: uppercase;
+}
+/* line 265, ../sass/main.sass */
+section .block1 {
+  background: #e5e5e5;
+  text-align: center;
+}
+/* line 268, ../sass/main.sass */
+section .block1 h2 {
+  color: #000;
+  font-size: 16px;
+  padding: 28px 0 28px 0;
+  margin: 0;
+  text-transform: uppercase;
+}
+/* line 274, ../sass/main.sass */
+section .block1 .grid {
   position: relative;
   width: 1070px;
   margin: 0px auto 0px auto;
 }
-/* line 237, ../sass/main.sass */
-section.main .block1 .grid .wrap-box {
+/* line 278, ../sass/main.sass */
+section .block1 .grid .wrap-box {
   display: inline-block;
   width: 33.33%;
   vertical-align: top;
-  margin-bottom: 50px;
+  margin-bottom: 28px;
 }
-/* line 242, ../sass/main.sass */
-section.main .block1 .grid .wrap-box .box {
+/* line 283, ../sass/main.sass */
+section .block1 .grid .wrap-box .box {
   background: #fff;
-  margin: 0px 7px;
+  margin: 0px 14px;
   overflow: hidden;
 }
-/* line 246, ../sass/main.sass */
-section.main .block1 .grid .wrap-box .box img {
+/* line 287, ../sass/main.sass */
+section .block1 .grid .wrap-box .box img {
   visibility: hidden;
 }
-/* line 248, ../sass/main.sass */
-section.main .block1 .grid .wrap-box .box .name {
+/* line 289, ../sass/main.sass */
+section .block1 .grid .wrap-box .box .name {
   position: relative;
   font-size: 14px;
   padding: 10px 15px 12px 15px;
@@ -360,45 +417,48 @@ section.main .block1 .grid .wrap-box .box .name {
   text-transform: uppercase;
   z-index: 1000;
 }
-/* line 256, ../sass/main.sass */
-section.main .block2 {
+/* line 297, ../sass/main.sass */
+section .block2 {
   background: #f3f3f3;
   text-align: center;
   padding-bottom: 35px;
 }
-/* line 260, ../sass/main.sass */
-section.main .block2 h2 {
+/* line 301, ../sass/main.sass */
+section .block2 h2 {
   color: #000;
   font-size: 16px;
-  padding: 25px 0 35px 0;
+  padding: 28px 0 28px 0;
   margin: 0;
   text-transform: uppercase;
 }
-/* line 266, ../sass/main.sass */
-section.main .block2 .reviews {
+/* line 307, ../sass/main.sass */
+section .block2 .reviews {
   position: relative;
-  width: 1070px;
   margin: 0px auto 0px auto;
-  background: #fff;
   padding: 65px 130px;
 }
-/* line 272, ../sass/main.sass */
-section.main .block2 .reviews p {
+/* line 311, ../sass/main.sass */
+section .block2 .reviews p {
   color: #000;
   font-size: 16px;
 }
-/* line 275, ../sass/main.sass */
-section.main .block2 .reviews strong {
+/* line 314, ../sass/main.sass */
+section .block2 .reviews strong {
   display: inline-block;
   text-transform: uppercase;
   margin-top: 15px;
 }
-/* line 279, ../sass/main.sass */
-section.main .block2 .reviews .slick-track {
+/* line 318, ../sass/main.sass */
+section .block2 .reviews .slick-track {
   text-align: left;
 }
-/* line 281, ../sass/main.sass */
-section.main .block2 .reviews .slick-next, section.main .block2 .reviews .slick-prev {
+/* line 320, ../sass/main.sass */
+section .block2 .reviews .slick-list {
+  width: 810px;
+  margin: 0 auto;
+}
+/* line 323, ../sass/main.sass */
+section .block2 .reviews .slick-next, section .block2 .reviews .slick-prev {
   position: absolute;
   height: 60px;
   width: 32px;
@@ -407,22 +467,81 @@ section.main .block2 .reviews .slick-next, section.main .block2 .reviews .slick-
   top: 50%;
   margin-top: -30px;
 }
-/* line 289, ../sass/main.sass */
-section.main .block2 .reviews .slick-next:focus, section.main .block2 .reviews .slick-prev:focus {
+/* line 331, ../sass/main.sass */
+section .block2 .reviews .slick-next:focus, section .block2 .reviews .slick-prev:focus {
   outline: 0;
 }
-/* line 291, ../sass/main.sass */
-section.main .block2 .reviews .slick-next {
+/* line 333, ../sass/main.sass */
+section .block2 .reviews .slick-next {
   background: url("../images/reviews_arrow.png") -32px 0 no-repeat;
   right: 20px;
 }
-/* line 294, ../sass/main.sass */
-section.main .block2 .reviews .slick-prev {
+/* line 336, ../sass/main.sass */
+section .block2 .reviews .slick-prev {
   background: url("../images/reviews_arrow.png") 0 0 no-repeat;
-  left: 20px;
+  background-left: 20px;
 }
 
-/* line 300, ../sass/main.sass */
+/* line 342, ../sass/main.sass */
 footer {
   text-align: center;
+}
+/* line 344, ../sass/main.sass */
+footer .wrap-footer1 {
+  height: 413px;
+  line-height: 413px;
+  background: url("../images/footer-bg.jpg") bottom right no-repeat;
+  background-size: cover;
+}
+/* line 349, ../sass/main.sass */
+footer .wrap-footer1 .footer1 {
+  display: inline-block;
+  height: 107px;
+  line-height: initial;
+}
+/* line 353, ../sass/main.sass */
+footer .wrap-footer1 .footer1 .head {
+  color: #000;
+  font-size: 24px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+/* line 358, ../sass/main.sass */
+footer .wrap-footer1 .footer1 a {
+  display: inline-block;
+  background: #51778b;
+  color: #fff;
+  font-size: 24px;
+  height: 45px;
+  line-height: 45px;
+  padding: 0px 24px;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  text-transform: uppercase;
+}
+/* line 368, ../sass/main.sass */
+footer .wrap-footer1 .footer1 a:hover {
+  color: #fff;
+}
+/* line 370, ../sass/main.sass */
+footer .wrap-footer1 .footer1 span {
+  display: inline-block;
+  color: #000;
+  font-size: 24px;
+  text-transform: uppercase;
+  padding: 0px 25px;
+  height: 45px;
+  line-height: 45px;
+  vertical-align: middle;
+}
+/* line 379, ../sass/main.sass */
+footer .footer2 {
+  background: #e5e5e5;
+  height: 80px;
+}
+
+/* line 384, ../sass/main.sass */
+#undefined-sticky-wrapper {
+  position: absolute;
 }
