--- a/src/Site/MainBundle/Resources/views/Frontend/Products/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Products/index.html.twig
@@ -42,4 +42,5 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset('bundles/sitemain/frontend/bower_components/sticky/jquery.sticky.js') }}"></script>
+    <script src="{{ asset('bundles/sitemain/frontend/scroll.js') }}"></script>
 {% endblock %}
