--- a/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
@@ -60,19 +60,21 @@
         {% block content %}
         {% endblock %}
     </header>
-    <footer>
-        <div class="wrap-footer1">
-            <div class="footer1">
-                <div class="head">вы можете позвонить нам по телефону: +7 (495) 625-86-43</div>
-                <div class="buttons">
-                    <a href="#" class="btn">написать нам</a>
-                    <span>или</span>
-                    <a href="#" class="btn">заказать обратный звонок</a>
+    {% block footer %}
+        <footer>
+            <div class="wrap-footer1">
+                <div class="footer1">
+                    <div class="head">вы можете позвонить нам по телефону: +7 (495) 625-86-43</div>
+                    <div class="buttons">
+                        <a href="#" class="btn">написать нам</a>
+                        <span>или</span>
+                        <a href="#" class="btn">заказать обратный звонок</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="footer2"></div>
-    </footer>
+            <div class="footer2"></div>
+        </footer>
+    {% endblock %}
     <!-- конец Шапка -->
 {% endblock %}
 
