--- a/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Main/index.html.twig
@@ -57,32 +57,47 @@
                     </div>
                 </div><div class="wrap-box">
                     <div class="box">
-                        <div class="name">Экономия</div>
+                        <div class="name">Изящество</div>
+                        <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
+                    </div>
+                </div><div class="wrap-box">
+                    <div class="box">
+                        <div class="name">Окупаемость</div>
                         <img src="{{ asset('bundles/sitemain/frontend/images/img1.jpg') }}" alt=""/>
                     </div>
                 </div>
             </div>
         </div>
         <div class="block2">
+            <div class="video"></div>
             <h2>Отзывы</h2>
             <div class="reviews">
                 <div>
-                    <p>Строительство бассейна придаст вашему дому новый уровень комфорта, а так же превратит его во все сезонный курорт.&nbsp;<br />
-                        Компания СЕАН АКВА-ТЕРМ специализируется на предоставлении комплекса услуг по проектированию, строительству&nbsp;и эксплуатации бассейнов. Нашими партнерами являются ведущие немецкие компании, работающие в сфере&nbsp;проектирования и производства оборудования</p>
+                    <div class="wrap-photo"><div class="photo"></div></div>
+                    <div class="text">
+                        <p>Строительство бассейна придаст вашему дому новый уровень комфорта, а так же превратит его во все сезонный курорт.&nbsp;<br />
+                            Компания СЕАН АКВА-ТЕРМ специализируется на предоставлении комплекса услуг по проектированию, строительству&nbsp;и эксплуатации бассейнов. Нашими партнерами являются ведущие немецкие компании, работающие в сфере&nbsp;проектирования и производства оборудования</p>
 
-                    <p><strong>компания &laquo;газпром&raquo;</strong></p>
+                        <p><strong>компания &laquo;газпром&raquo;</strong></p>
+                    </div>
                 </div>
                 <div>
-                    <p>Строительство бассейна придаст вашему дому новый уровень комфорта, а так же превратит его во все сезонный курорт.&nbsp;<br />
-                        Компания СЕАН АКВА-ТЕРМ специализируется на предоставлении комплекса услуг по проектированию, строительству&nbsp;и эксплуатации бассейнов. Нашими партнерами являются ведущие немецкие компании, работающие в сфере&nbsp;проектирования и производства оборудования</p>
+                    <div class="wrap-photo"><div class="photo"></div></div>
+                    <div class="text">
+                        <p>Строительство бассейна придаст вашему дому новый уровень комфорта, а так же превратит его во все сезонный курорт.&nbsp;<br />
+                            Компания СЕАН АКВА-ТЕРМ специализируется на предоставлении комплекса услуг по проектированию, строительству&nbsp;и эксплуатации бассейнов. Нашими партнерами являются ведущие немецкие компании, работающие в сфере&nbsp;проектирования и производства оборудования</p>
 
-                    <p><strong>компания &laquo;газпром&raquo;</strong></p>
+                        <p><strong>компания &laquo;газпром&raquo;</strong></p>
+                    </div>
                 </div>
                 <div>
-                    <p>Строительство бассейна придаст вашему дому новый уровень комфорта, а так же превратит его во все сезонный курорт.&nbsp;<br />
-                        Компания СЕАН АКВА-ТЕРМ специализируется на предоставлении комплекса услуг по проектированию, строительству&nbsp;и эксплуатации бассейнов. Нашими партнерами являются ведущие немецкие компании, работающие в сфере&nbsp;проектирования и производства оборудования</p>
+                    <div class="wrap-photo"><div class="photo"></div></div>
+                    <div class="text">
+                        <p>Строительство бассейна придаст вашему дому новый уровень комфорта, а так же превратит его во все сезонный курорт.&nbsp;<br />
+                            Компания СЕАН АКВА-ТЕРМ специализируется на предоставлении комплекса услуг по проектированию, строительству&nbsp;и эксплуатации бассейнов. Нашими партнерами являются ведущие немецкие компании, работающие в сфере&nbsp;проектирования и производства оборудования</p>
 
-                    <p><strong>компания &laquo;газпром&raquo;</strong></p>
+                        <p><strong>компания &laquo;газпром&raquo;</strong></p>
+                    </div>
                 </div>
             </div>
         </div>
