--- a/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/layout.html.twig
@@ -67,6 +67,8 @@
                     <div class="head">вы можете позвонить нам по телефону: +7 (495) 625-86-43</div>
                     <div class="buttons">
                         <a href="#" class="btn">написать нам</a>
+                        <span>или</span>
+                        <a href="#" class="btn">заказать обратный звонок</a>
                     </div>
                 </div>
             </div>
